--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,33 +1,36 @@
-
-body{
+body {
   text-align: center;
   background-color: black;
 }
 
-h1, h2, p{
+h1, h2, p {
   font-family: Verdana, cursive;
 }
 
-h1, h2{
+h1, h2 {
   color: white;
 }
 
-h1{
+h1 {
   font-weight: normal;
   font-size: 50px;
 }
 
-h2{
+h2 {
   font-weight: 300;
   font-size: 42px;
 }
 
-p{
+p {
   font-size: 21px;
   color: gray;
 }
 
-.link{
+.link {
   color: aquamarine;
   font-size: 16px;
+}
+
+.watermark {
+  text-align: right;
 }
